fasta proteinas done

--- a/src/AppFourthGraph.css
+++ b/src/AppFourthGraph.css
@@ -17,21 +17,74 @@
 }
 
 .A{
-  color: #d62728;
+  color: #D90025;
 }
-
-.G{
-  color: #1f77b4;
-}
-
 .C{
-  color: #2ca02c;
+  color: #3BD23D;
 }
-
+.G{
+  color: #0082B4;
+}
 .T{
-  color: #bcbd22;
+  color: #F6EB61;
 }
-
+.R{
+  color: #F6EB61;
+}
+.R{
+  color: #B5CF61;
+}
+.N{
+  color: #FFAA52;
+}
+.D{
+  color: #FF82DB;
+}
+.B{
+  color: #A89E81;
+}
+.E{
+  color: #696C71;
+}
+.Q{
+  color: #9AFF1C;
+}
+.Z{
+  color: #B88BB3;
+}
+.H{
+  color: #45B8AC;
+}
+.I{
+  color: #52703F;
+}
+.L{
+  color: #D7B7AA;
+}
+.K{
+  color: #7D303D;
+}
+.M{
+  color: #E25A06;
+}
+.F{
+  color: #3B4B87;
+}
+.P{
+  color: #7B5EC6;
+}
+.S{
+  color: #CFB023;
+}
+.W{
+  color: #99D6EA;
+}
+.Y{
+  color: #C800A1;
+}
+.V{
+  color: #212322;
+}
 .gap{
-    color: #8c564b;
+    color: #AA6B24;
 }
