--- a/src/AppFourthGraph.css
+++ b/src/AppFourthGraph.css
@@ -16,6 +16,11 @@
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
 }
 
+.cuartaGraficaMargen{
+  margin-top: 2100px;
+  margin-bottom: 150px;
+}
+
 .A{
   color: #D90025;
 }
