--- a/src/AppSecondGraph.css
+++ b/src/AppSecondGraph.css
@@ -11,7 +11,7 @@
 	shape-rendering: crispEdges;
 }
 
-.segundaGrafica{
+.segundaGraficaBlock{
 	display: block
 }
 
@@ -19,4 +19,8 @@
 	position: absolute;
 	left: 50%;
 	transform: translate(-50%, 0);
+}
+
+.segundaGraficaMargen{
+	margin-top: 700px;
 }
