--- a/src/AppFifthGraph.css
+++ b/src/AppFifthGraph.css
@@ -12,7 +12,11 @@
   }
 
   .quintaGraficaMargen{
-    margin-top: 100px;
+    margin-top: 50px;
+  }
+
+  .margentitulo5{
+    margin-bottom: 50px;
   }
 
   .A{
