--- a/src/AppFourthGraph.css
+++ b/src/AppFourthGraph.css
@@ -17,8 +17,12 @@
 }
 
 .cuartaGraficaMargen{
-  margin-top: 2100px;
-  margin-bottom: 150px;
+  margin-top: 1950px;
+  margin-bottom: 100px;
+}
+
+.margentitulo4{
+  margin-bottom: 40px;
 }
 
 .A{
