--- a/src/AppFifthGraph.css
+++ b/src/AppFifthGraph.css
@@ -3,19 +3,19 @@
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
 }
 
-.stoptabla {
+.stoptable {
   background-color: #999999;
 }
 
-.Mtabla {
+.Mtable {
   background-color: #B5CF61;
 }
 
-.quintaGraficaMargen {
+.fifthGraphMargin {
   margin-top: 20px;
 }
 
-.margentitulo5 {
+.margintitle5 {
   margin-bottom: 50px;
 }
 
