--- a/src/AppFourthGraph.css
+++ b/src/AppFourthGraph.css
@@ -16,12 +16,12 @@
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
 }
 
-.cuartaGraficaMargen {
+.fourthGraphMargin {
   margin-top: 1875px;
   margin-bottom: 100px;
 }
 
-.margentitulo4 {
+.margintitle4 {
   margin-bottom: 40px;
 }
 
