--- a/src/AppFourthGraph.css
+++ b/src/AppFourthGraph.css
@@ -17,7 +17,7 @@
 }
 
 .fourthGraphMargin {
-  margin-top: 1875px;
+  margin-top: 1465px;
   margin-bottom: 100px;
 }
 
@@ -38,7 +38,7 @@
 }
 
 .T {
-  color: #F6EB61;
+  color: #FCE205;
 }
 
 .R {
